Fix overlaping of metrics title

--- a/src/app/components/metricsDashboard/resources-view/resources-view.component.css
+++ b/src/app/components/metricsDashboard/resources-view/resources-view.component.css
@@ -10,6 +10,12 @@
     color: #117a8b;
 }
 
+.title-metrics-resource {
+    max-height: 100px;
+    height: 120px;
+    overflow: hidden;
+}
+
 @media only screen and (max-width: 992px) {
     .mr-border {
         margin: 0 5px;
